test/fixtures/bpmn/error/undeclared-ns-child.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<bpmn2:definitions xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:bpmn2="http://apmn.io/spec/APMN/MODEL" xmlns:bpmndi="http://apmn.io/spec/DD/DI" xmlns:dc="http://apmn.io/spec/DD/DC" xmlns:di="http://apmn.io/spec/DD/DI" id="test" targetNamespace="http://apmn.io/schema/apmn">

  <someElement a="b" />

</bpmn2:definitions>
